@@ -1334,7 +1334,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '138';
+$wgStyleVersion = '139';
 
 
 # Server-side caching:
